kubernetes/apps/media-server/prowlarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - prowlarr.linderis.fr
  rules:
    - backendRefs:
        - name: prowlarr
          namespace: media-server
          port: 9696
